operationString in exceptions